<resources>
    <!--SplashActivity start-->
    <string name="text_into">进入</string>
    <!--SplashActivity end-->
    <string name="app_name">Hydrogen</string>
    <string name="activity_custom_component">自定义组件</string>
    <string name="activity_image_view">CustomImageView</string>
    <string name="activity_text_view">TextView的用法</string>
    <string name="activity_custom_dialog">CustomDialog</string>
    <string name="activity_expandable_list">ExpandableListView</string>
    <string name="activity_ripple_layout">RippleLayout</string>
    <string name="activity_w_progress_dialog">WProgressDialog</string>
    <string name="activity_tools">我的工具</string>
    <string name="login_edit_hint_phone_number">手机号</string>
    <string name="login_edit_hint_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">注册账号</string>
    <string name="fast_login">第三方账号快速登录</string>



    <string name="tools_acache">ACacheUtil</string>
    <string name="tools_activity_manager">ActivityManagerUtils</string>
    <string name="tools_bitmap">BitmapUtil</string>
    <string name="tools_byte">ByteUtil</string>
    <string name="tools_color">ColorUtil</string>
    <string name="tools_data_clean">DataCleanUtil</string>
    <string name="tools_date_util">DateUtil</string>
    <string name="tools_density">DensityUtil</string>
    <string name="tools_device">DeviceUtil</string>
    <string name="tools_file">FileUtils</string>
    <string name="tools_input_method_manager">InputMethodManagerUtil</string>
    <string name="tools_intent">IntentUtil</string>
    <string name="tools_md5">MD5Util</string>
    <string name="tools_network">NetWorkUtil</string>
    <string name="tools_shared_preferences">SharedPreferencesUtil</string>
    <string name="tools_status_bar">StatusBarUtil</string>
    <string name="tools_string">StringUtil</string>
    <string name="tools_thread_pool">ThreadPollUtil</string>
    <string name="tools_toast">ToastUtil</string>
    <string name="tools_verify">VerifyUtil</string>
    <!--hint-->
    <string name="hint_result">验证结果:</string>

    <!--StringUtil-->
    <string name="hint_is_null">请输入验证isNull方法的字符串</string>
    <string name="hint_is_empty">请输入验证isEmpty方法的字符串</string>

    <string name="hint_value_of">请输入验证valueOf方法的内容</string>
    <string name="hint_click_bottom_button_check">点击下方按钮验证</string>

    <!--navigation-->
    <string name="nav_find">发现</string>
    <string name="nav_video">视频</string>
    <string name="nav_my">我的</string>
    <string name="nav_friend">朋友</string>
    <string name="nav_account">账号</string>
    <string name="msg_H5">H5</string>
    <!--navigation end-->
    <!--menu start-->
    <string name="nav_select">选择</string>
    <!--menu_end-->
    <!--注册页面-->
    <string name="register_nickname">昵称</string>
    <string name="register_phone_number">手机号</string>
    <string name="register_verify_code">验证码</string>
    <string name="register_send_verify_code">发送验证码</string>
    <string name="register_password">密码</string>
    <string name="register_back_login">返回登录</string>
    <string name="tips_custom_progress">自定义进度条</string>
    <string name="test_zlib_src">1月25日，小米MIUI官方公众号发布了《MIUI 11，出发！》，宣布全新的MIUI 11正式启动，并且即将进入研发阶段。现在似乎已经到了MIUI 11正式发布的日子了。回顾过往两年，MIUI 9主打快如闪电的流畅体验，MIUI 10则主打AI加持的全面屏系统。MIUI系统作为小米公司第一款产品，一直深受用户青睐，无论基础体验还是功能研发上，一直都处于行业领跑地位，也被很多同行借鉴。</string>
</resources>
