<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="nickname"
            type="String" />

        <variable
            name="phone_number"
            type="String" />

        <variable
            name="verify_code"
            type="String" />
    </data>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/layout_register_app_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/layout_register_weight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_32sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register_weight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/material_layout_view_left_right_margin_16dp"
            android:layout_marginRight="@dimen/material_layout_view_left_right_margin_16dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/material_layout_view_left_right_margin_16dp"
            android:paddingLeft="@dimen/material_layout_view_left_right_margin_16dp"
            android:paddingEnd="@dimen/material_layout_view_left_right_margin_16dp"
            android:paddingRight="@dimen/material_layout_view_left_right_margin_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_register_app_name"
            app:layout_constraintVertical_weight="2.2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_nickname"
                    android:textColor="@color/blackGray"
                    android:textSize="@dimen/text_size_18sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_phone_number"
                    android:textColor="@color/blackGray"
                    android:textSize="@dimen/text_size_18sp" />


            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"

                android:layout_height="@dimen/material_component_button_height_48dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_verify_code" />

                </android.support.design.widget.TextInputLayout>


                <com.wonium.java.library.ui.weight.ScheduledButton
                    android:id="@+id/btn_send_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:minHeight="@dimen/material_component_button_height_42dp"
                    android:text="发送验证码"
                    android:textColor="@color/blackGray"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintRight_toRightOf="parent" />

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password" />


            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_layout_view_top_bottom_margin_24dp"

                android:background="@color/blackGray"
                android:text="@string/register"
                android:textColor="@color/whiteSmoke"
                android:textSize="@dimen/text_size_18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_register_back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/material_layout_view_top_bottom_margin_16dp"
                android:text="@string/register_back_login"
                android:textColor="@color/blackGray"
                android:textSize="@dimen/text_size_18sp" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</layout>
