<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black_p50"
                android:textSize="@dimen/text_size_32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="2"
            android:paddingStart="@dimen/material_layout_view_left_padding_16dp"
            android:paddingLeft="@dimen/material_layout_view_left_padding_16dp"
            android:paddingEnd="@dimen/material_layout_view_right_margin_16dp"
            android:paddingRight="@dimen/material_layout_view_right_margin_16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/darkGray"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_edit_hint_phone_number"
                    android:textColor="@color/black_p50" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_edit_hint_password"
                    android:textColor="@color/black_p50" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.wonium.hydrogen.ui.widget.RippleLayout
                android:id="@+id/layout_ripple_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_password"
                app:rl_color="@color/lightYellow"
                app:rl_type="rectangle">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/material_component_button_touchable_target_height"
                    android:background="@color/black"
                    android:text="@string/login"
                    android:textColor="@color/whiteSmoke"
                    android:textSize="@dimen/text_size_18sp" />


            </com.wonium.hydrogen.ui.widget.RippleLayout>


            <RelativeLayout
                android:id="@+id/layout_forget_password_and_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_layout_view_top_margin_8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/layout_ripple_login">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textColor="@color/black"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_register_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/register_account"
                    android:textColor="@color/black"
                    app:layout_constraintRight_toRightOf="parent" />

            </RelativeLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_fast_login_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/material_layout_view_right_margin_16dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_forget_password_and_register">

                <View
                    android:layout_width="0.0dp"
                    android:layout_height="@dimen/material_layout_separator_height_1dp"
                    android:layout_marginEnd="@dimen/material_layout_view_right_padding_8dp"
                    android:layout_marginRight="@dimen/material_layout_view_right_padding_8dp"
                    android:background="@color/lavender"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/tv_fast_login_hint"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_fast_login_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0.0dp"
                    android:layout_height="@dimen/material_layout_separator_height_1dp"
                    android:layout_marginStart="@dimen/material_layout_view_left_padding_8dp"
                    android:layout_marginLeft="@dimen/material_layout_view_left_padding_8dp"
                    android:background="@color/lavender"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tv_fast_login_hint"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_layout_view_top_margin_8dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_fast_login_hint">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_login_wei_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:src="@drawable/login_weichat_img"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/img_login_qq"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_login_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_qq_img"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_login_wei_bo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_weibo_img"
                    app:layout_constraintLeft_toRightOf="@+id/img_login_qq"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>
